--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,11 @@ on:
     branches: [main]
   pull_request:
 
+permissions:
+  contents: write
+  pages: write
+  id-token: write
+
 jobs:
   build-test:
     runs-on: ubuntu-latest
