--- a/package.json
+++ b/package.json
@@ -15,21 +15,23 @@
   "author": "TitanlordCode",
   "license": "MIT",
   "scripts": {
-    "start": "docker-compose up --build storybook",
+    "start": "npm run generate:files && docker-compose up --build storybook",
     "docker:build": "docker-compose build",
-    "build": "vite build",
+    "build": "npm run generate:files && vite build",
     "prepublishOnly": "npm run build",
     "preview": "vite preview",
     "test:unit": "vitest",
     "test:storybook": "test-storybook",
-    "build-only": "vite build",
+    "build-only": "npm run generate:files && vite build",
     "type-check": "vue-tsc --build",
     "lint": "eslint . --fix",
     "format": "npx prettier --write src/",
     "storybook": "storybook dev -p 3000 --no-open",
-    "build-storybook": "storybook build --output-dir storybook-static"
+    "build-storybook": "storybook build --output-dir storybook-static",
+    "generate:files": "npx ts-node scripts/pre-flight.ts"
   },
   "dependencies": {
+    "material-colors": "^1.2.6",
     "pinia": "^2.3.1",
     "vue": "^3.5.13"
   },
@@ -61,6 +63,7 @@
     "npm-run-all2": "^7.0.2",
     "prettier": "^3.4.2",
     "storybook": "^8.5.3",
+    "ts-node": "^10.9.2",
     "typescript": "~5.7.3",
     "vite": "^6.0.11",
     "vite-plugin-vue-devtools": "^7.7.1",
