feat(setup): add stylelint and post css

--- a/docker/DOCKERFILE.storybook
+++ b/docker/DOCKERFILE.storybook
@@ -7,5 +7,13 @@ RUN npm ci
 
 COPY . .
 
+RUN npm run type-check
+
+RUN npm run lint:fix
+
+RUN npm run stylelint:css
+
+RUN npm run prettier:fix
+
 EXPOSE 3000
 CMD ["npm", "run", "storybook"]
