--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "test:storybook": "test-storybook",
     "build-only": "npm run generate:files && vite build",
     "type-check": "vue-tsc --build",
-    "lint": "eslint . --fix",
-    "format": "npx prettier --write src/",
+    "lint:fix": "eslint . --fix",
+    "stylelint:css": "stylelint \"src/**/*.{css,vue}\"",
+    "stylelint:css:fix": "stylelint \"src/**/*.{css,vue}\" --fix",
+    "prettier:check": "npx prettier --check src/",
+    "prettier:fix": "npx prettier --write src/",
     "storybook": "storybook dev -p 3000 --no-open",
     "build-storybook": "storybook build --output-dir storybook-static",
     "generate:files": "npx ts-node scripts/pre-flight.ts"
@@ -61,8 +64,15 @@
     "jiti": "^2.4.2",
     "jsdom": "^26.0.0",
     "npm-run-all2": "^7.0.2",
+    "postcss-mixins": "^12.1.2",
+    "postcss-pxtorem": "^6.1.0",
     "prettier": "^3.4.2",
     "storybook": "^8.5.3",
+    "stylelint": "^16.23.1",
+    "stylelint-config-recommended-vue": "^1.6.1",
+    "stylelint-config-standard": "^39.0.0",
+    "stylelint-declaration-strict-value": "^1.10.11",
+    "stylelint-order": "^7.0.0",
     "ts-node": "^10.9.2",
     "typescript": "~5.7.3",
     "vite": "^6.0.11",
