--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,7 +1,8 @@
-
 {
   "$schema": "https://json.schemastore.org/prettierrc",
   "semi": false,
   "singleQuote": true,
+  "useTabs": true,
+  "tabWidth": 2,
   "printWidth": 100
 }
