--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     volumes:
       - .:/app
       - /app/node_modules
+    environment:
+      - CHOKIDAR_USEPOLLING=true
     container_name: neo-materia-storybook
 
   tests:
