feat(button): fix classes reactivity (#2)
* NOTICKET // remove base dockerfile and add interactions for button

* feat(setup): add colors and generation scripts

* feat(setup): add stylelint and post css

* feat(button): fix classes reactivity

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,11 +34,14 @@ jobs:
       - name: ✅ Type check
         run: npm run type-check
 
-      - name: 🧹 Lint
-        run: npm run lint
+      - name: 🧹 EsLint
+        run: npm run lint:fix
+
+      - name: 👔 StyleLint
+        run: npm run stylelint:css
 
       - name: 🎯 Format check
-        run: npx prettier --check src/
+        run: npm run prettier:check
 
       - name: 🧱 Build Storybook
         run: npm run build-storybook
