--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,21 @@
-version: '3.9'
-
 services:
-  base:
-    build:
-      context: .
-      dockerfile: docker/DOCKERFILE.base
-    image: neo-materia-base:latest
-
   storybook:
     build:
       context: .
       dockerfile: docker/DOCKERFILE.storybook
-    depends_on:
-      - base
     ports:
       - '3000:3000'
     volumes:
       - .:/app
       - /app/node_modules
+    environment:
+      - CHOKIDAR_USEPOLLING=true
     container_name: neo-materia-storybook
 
   tests:
     build:
       context: .
-      dockerfile: docker/DOCKERFILE.tests
-    depends_on:
-      - base
+      dockerfile: docker/DOCKERFILE.test
     volumes:
       - .:/app
       - /app/node_modules
