--- a/package.json
+++ b/package.json
@@ -15,26 +15,32 @@
   "author": "TitanlordCode",
   "license": "MIT",
   "scripts": {
-    "start": "docker-compose up storybook",
+    "start": "npm run generate:files && docker-compose up --build storybook",
     "docker:build": "docker-compose build",
-    "build": "vite build",
+    "build": "npm run generate:files && vite build",
     "prepublishOnly": "npm run build",
     "preview": "vite preview",
     "test:unit": "vitest",
     "test:storybook": "test-storybook",
-    "build-only": "vite build",
+    "build-only": "npm run generate:files && vite build",
     "type-check": "vue-tsc --build",
-    "lint": "eslint . --fix",
-    "format": "npx prettier --write src/",
+    "lint:fix": "eslint . --fix",
+    "stylelint:css": "stylelint \"src/**/*.{css,vue}\"",
+    "stylelint:css:fix": "stylelint \"src/**/*.{css,vue}\" --fix",
+    "prettier:check": "npx prettier --check src/",
+    "prettier:fix": "npx prettier --write src/",
     "storybook": "storybook dev -p 3000 --no-open",
-    "build-storybook": "storybook build --output-dir storybook-static"
+    "build-storybook": "storybook build --output-dir storybook-static",
+    "generate:files": "npx ts-node scripts/pre-flight.ts"
   },
   "dependencies": {
+    "material-colors": "^1.2.6",
     "pinia": "^2.3.1",
     "vue": "^3.5.13"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.4",
+    "@storybook/addon-a11y": "^8.6.14",
     "@storybook/addon-essentials": "^8.5.3",
     "@storybook/addon-interactions": "^8.5.3",
     "@storybook/addon-onboarding": "^8.5.3",
@@ -58,8 +64,16 @@
     "jiti": "^2.4.2",
     "jsdom": "^26.0.0",
     "npm-run-all2": "^7.0.2",
+    "postcss-mixins": "^12.1.2",
+    "postcss-pxtorem": "^6.1.0",
     "prettier": "^3.4.2",
     "storybook": "^8.5.3",
+    "stylelint": "^16.23.1",
+    "stylelint-config-recommended-vue": "^1.6.1",
+    "stylelint-config-standard": "^39.0.0",
+    "stylelint-declaration-strict-value": "^1.10.11",
+    "stylelint-order": "^7.0.0",
+    "ts-node": "^10.9.2",
     "typescript": "~5.7.3",
     "vite": "^6.0.11",
     "vite-plugin-vue-devtools": "^7.7.1",
