--- a/package.json
+++ b/package.json
@@ -1,91 +1,93 @@
 {
-  "name": "neo-materia",
-  "version": "0.0.1",
-  "description": "A Vue 3 component library based on Atomic Design and Material Design colors.",
-  "main": "dist/neo-materia.es.js",
-  "module": "dist/neo-materia.es.js",
-  "types": "dist/index.d.ts",
-  "files": [
-    "dist"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/TitanlordCode/NeoMateria.git"
-  },
-  "author": "TitanlordCode",
-  "license": "MIT",
-  "scripts": {
-    "start": "npm run generate:files && docker-compose up --build storybook",
-    "docker:build": "docker-compose build",
-    "build": "npm run generate:files && vite build",
-    "prepublishOnly": "npm run build",
-    "preview": "vite preview",
-    "test:unit": "vitest",
-    "test:storybook": "test-storybook",
-    "build-only": "npm run generate:files && vite build",
-    "type-check": "vue-tsc --build",
-    "lint:fix": "eslint . --fix",
-    "stylelint:css": "stylelint \"src/**/*.{css,vue}\"",
-    "stylelint:css:fix": "stylelint \"src/**/*.{css,vue}\" --fix",
-    "prettier:check": "npx prettier --check src/",
-    "prettier:fix": "npx prettier --write src/",
-    "storybook": "storybook dev -p 3000 --no-open",
-    "build-storybook": "storybook build --output-dir storybook-static",
-    "generate:files": "npx ts-node scripts/pre-flight.ts"
-  },
-  "dependencies": {
-    "material-colors": "^1.2.6",
-    "pinia": "^2.3.1",
-    "vue": "^3.5.13"
-  },
-  "devDependencies": {
-    "@chromatic-com/storybook": "^3.2.4",
-    "@storybook/addon-a11y": "^8.6.14",
-    "@storybook/addon-essentials": "^8.5.3",
-    "@storybook/addon-interactions": "^8.5.3",
-    "@storybook/addon-onboarding": "^8.5.3",
-    "@storybook/blocks": "^8.5.3",
-    "@storybook/test-runner": "^0.23.0",
-    "@storybook/vue3": "^8.5.3",
-    "@storybook/vue3-vite": "^8.5.3",
-    "@tsconfig/node22": "^22.0.0",
-    "@types/jsdom": "^21.1.7",
-    "@types/node": "^22.13.1",
-    "@vitejs/plugin-vue": "^5.2.1",
-    "@vitejs/plugin-vue-jsx": "^4.1.1",
-    "@vitest/eslint-plugin": "1.1.25",
-    "@vue/eslint-config-prettier": "^10.1.0",
-    "@vue/eslint-config-typescript": "^14.3.0",
-    "@vue/test-utils": "^2.4.6",
-    "@vue/tsconfig": "^0.7.0",
-    "eslint": "^9.18.0",
-    "eslint-plugin-storybook": "^0.11.2",
-    "eslint-plugin-vue": "^9.32.0",
-    "jiti": "^2.4.2",
-    "jsdom": "^26.0.0",
-    "npm-run-all2": "^7.0.2",
-    "postcss-mixins": "^12.1.2",
-    "postcss-pxtorem": "^6.1.0",
-    "prettier": "^3.4.2",
-    "storybook": "^8.5.3",
-    "stylelint": "^16.23.1",
-    "stylelint-config-recommended-vue": "^1.6.1",
-    "stylelint-config-standard": "^39.0.0",
-    "stylelint-declaration-strict-value": "^1.10.11",
-    "stylelint-order": "^7.0.0",
-    "ts-node": "^10.9.2",
-    "typescript": "~5.7.3",
-    "vite": "^6.0.11",
-    "vite-plugin-vue-devtools": "^7.7.1",
-    "vitest": "^3.0.5",
-    "vue-tsc": "^2.2.0"
-  },
-  "eslintConfig": {
-    "extends": [
-      "plugin:storybook/recommended"
-    ]
-  },
-  "publishConfig": {
-    "access": "public"
-  }
+	"name": "neo-materia",
+	"version": "0.0.1",
+	"description": "A Vue 3 component library based on Atomic Design and Material Design colors.",
+	"main": "dist/neo-materia.es.js",
+	"module": "dist/neo-materia.es.js",
+	"types": "dist/index.d.ts",
+	"files": [
+		"dist"
+	],
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/TitanlordCode/NeoMateria.git"
+	},
+	"author": "TitanlordCode",
+	"license": "MIT",
+	"scripts": {
+		"start": "npm run generate:files && docker-compose up --build storybook",
+		"docker:build": "docker-compose build",
+		"build": "npm run generate:files && vite build",
+		"prepublishOnly": "npm run build",
+		"preview": "vite preview",
+		"test": "npm run type-check && npm run lint:check && npm run stylelint:css && npm run prettier:check",
+		"test:unit": "vitest",
+		"test:storybook": "test-storybook",
+		"build-only": "npm run generate:files && vite build",
+		"type-check": "vue-tsc --build",
+		"lint:check": "eslint .",
+		"lint:fix": "eslint . --fix",
+		"stylelint:css": "stylelint \"src/**/*.{css,vue}\"",
+		"stylelint:css:fix": "stylelint \"src/**/*.{css,vue}\" --fix",
+		"prettier:check": "npx prettier --check src/",
+		"prettier:fix": "npx prettier --write src/",
+		"storybook": "storybook dev -p 3000 --no-open",
+		"build-storybook": "storybook build --output-dir storybook-static",
+		"generate:files": "npx ts-node scripts/pre-flight.ts"
+	},
+	"dependencies": {
+		"material-colors": "^1.2.6",
+		"pinia": "^2.3.1",
+		"vue": "^3.5.13"
+	},
+	"devDependencies": {
+		"@chromatic-com/storybook": "^3.2.4",
+		"@storybook/addon-a11y": "^8.6.14",
+		"@storybook/addon-essentials": "^8.5.3",
+		"@storybook/addon-interactions": "^8.5.3",
+		"@storybook/addon-onboarding": "^8.5.3",
+		"@storybook/blocks": "^8.5.3",
+		"@storybook/test-runner": "^0.23.0",
+		"@storybook/vue3": "^8.5.3",
+		"@storybook/vue3-vite": "^8.5.3",
+		"@tsconfig/node22": "^22.0.0",
+		"@types/jsdom": "^21.1.7",
+		"@types/node": "^22.13.1",
+		"@vitejs/plugin-vue": "^5.2.1",
+		"@vitejs/plugin-vue-jsx": "^4.1.1",
+		"@vitest/eslint-plugin": "1.1.25",
+		"@vue/eslint-config-prettier": "^10.1.0",
+		"@vue/eslint-config-typescript": "^14.3.0",
+		"@vue/test-utils": "^2.4.6",
+		"@vue/tsconfig": "^0.7.0",
+		"eslint": "^9.18.0",
+		"eslint-plugin-storybook": "^0.11.2",
+		"eslint-plugin-vue": "^9.32.0",
+		"jiti": "^2.4.2",
+		"jsdom": "^26.0.0",
+		"npm-run-all2": "^7.0.2",
+		"postcss-mixins": "^12.1.2",
+		"postcss-pxtorem": "^6.1.0",
+		"prettier": "^3.4.2",
+		"storybook": "^8.5.3",
+		"stylelint": "^16.23.1",
+		"stylelint-config-recommended-vue": "^1.6.1",
+		"stylelint-config-standard": "^39.0.0",
+		"stylelint-declaration-strict-value": "^1.10.11",
+		"stylelint-order": "^7.0.0",
+		"ts-node": "^10.9.2",
+		"typescript": "~5.7.3",
+		"vite": "^6.0.11",
+		"vite-plugin-vue-devtools": "^7.7.1",
+		"vitest": "^3.0.5",
+		"vue-tsc": "^2.2.0"
+	},
+	"eslintConfig": {
+		"extends": [
+			"plugin:storybook/recommended"
+		]
+	},
+	"publishConfig": {
+		"access": "public"
+	}
 }
