--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
 		"ts-node": "^10.9.2",
 		"typescript": "~5.7.3",
 		"vite": "^6.0.11",
+		"vite-plugin-dts": "^4.5.4",
 		"vite-plugin-vue-devtools": "^7.7.1",
 		"vitest": "^3.0.5",
 		"vue-tsc": "^2.2.0"
