setup(infrastructure): update ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,6 +55,8 @@ jobs:
     steps:
       - name: ⬇️ Checkout repo
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: 🧱 Setup Node.js
         uses: actions/setup-node@v4
@@ -65,11 +67,31 @@ jobs:
       - name: 📦 Install dependencies
         run: npm ci
 
+      - name: 🔍 Check version changed (main only)
+        if: github.ref == 'refs/heads/main'
+        id: version-check
+        run: |
+          CURRENT_VERSION=$(node -p "require('./package.json').version")
+          echo "current_version=$CURRENT_VERSION" >> $GITHUB_OUTPUT
+
+          # Try to get the latest published version from npm
+          PUBLISHED_VERSION=$(npm view neo-materia version 2>/dev/null || echo "0.0.0")
+          echo "published_version=$PUBLISHED_VERSION" >> $GITHUB_OUTPUT
+
+          if [ "$CURRENT_VERSION" != "$PUBLISHED_VERSION" ]; then
+            echo "version_changed=true" >> $GITHUB_OUTPUT
+            echo "✅ Version changed from $PUBLISHED_VERSION to $CURRENT_VERSION - will deploy Storybook"
+          else
+            echo "version_changed=false" >> $GITHUB_OUTPUT
+            echo "⏭️  Version unchanged: $CURRENT_VERSION - skipping Storybook deployment"
+          fi
+
       - name: 🧱 Build Storybook
+        if: github.ref == 'refs/heads/develop' || (github.ref == 'refs/heads/main' && steps.version-check.outputs.version_changed == 'true')
         run: npm run build-storybook
 
       - name: 🚀 Deploy to GitHub Pages (Release)
-        if: github.ref == 'refs/heads/main'
+        if: github.ref == 'refs/heads/main' && steps.version-check.outputs.version_changed == 'true'
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
